==> u-blox/cellular/port/platform/nordic/nrf52840/src/cellular_port_uart.c <==
# include "cellular_cfg_override.h" // For a customer's configuration override
#include "cellular_cfg_sw.h"
#include "cellular_port_debug.h"
#include "cellular_port_clib.h"
#include "cellular_port.h"
#include "cellular_port_os.h"
#include "cellular_port_uart.h"
#include "cellular_port_private.h"
#include "FreeRTOS.h"
#include "queue.h"
#include "task.h"
#include "nrf.h"
#include "nrf_uarte.h"
#include "nrf_gpio.h"
# define CELLULAR_PORT_UART_MAX_NUM 2
#  define CELLULAR_PORT_UART_MAX_NUM 2
#    define CELLULAR_PORT_UART_MAX_NUM 1
# define CELLULAR_PORT_UART_SUB_BUFFER_SIZE 128
#define CELLULAR_PORT_UART_NUM_SUB_BUFFERS (CELLULAR_PORT_UART_RX_BUFFER_SIZE / CELLULAR_PORT_UART_SUB_BUFFER_SIZE)

int32_t cellularPortUartInit(int32_t pinTx, int32_t pinRx,
                             int32_t pinCts, int32_t pinRts,
                             int32_t baudRate,
                             size_t rtsThreshold,
                             int32_t uart,
                             CellularPortQueueHandle_t *pUartQueue)
{
    CellularPortErrorCode_t errorCode = CELLULAR_PORT_INVALID_PARAMETER;
    int32_t baudRateNrf = baudRateToNrfBaudRate(baudRate);
    uint32_t pinCtsNrf = NRF_UARTE_PSEL_DISCONNECTED;
    uint32_t pinRtsNrf = NRF_UARTE_PSEL_DISCONNECTED;
    nrf_uarte_hwfc_t hwfc = NRF_UARTE_HWFC_DISABLED;
    NRF_UARTE_Type *pReg;
    char *pRxBuffer = NULL;

    // The RTS threshold is not adjustable on this platform,
    // From the nRF52840 Product Specification, UARTE section:
    // "The RTS signal will be deactivated when the receiver
    // is stopped via the STOPRX task or when the UARTE is
    // only able to receive four more bytes in its internal
    // RX FIFO."
    (void) rtsThreshold;

    if ((pUartQueue != NULL) && (pinRx >= 0) && (pinTx >= 0) &&
        (uart < sizeof(gUartData) / sizeof(gUartData[0])) && 
        (baudRateNrf >= 0)) {
        errorCode = CELLULAR_PORT_SUCCESS;
        if (gUartData[uart].mutex == NULL) {
            pReg = gUartData[uart].pReg;

#if NRFX_PRS_ENABLED
            static nrfx_irq_handler_t const irq_handlers[NRFX_UARTE_ENABLED_COUNT] = {
# if !NRFX_UARTE0_ENABLED
                nrfx_uarte_0_irq_handler,
# endif
# if !NRFX_UARTE1_ENABLED
                nrfx_uarte_1_irq_handler,
# endif
            };
            if (nrfx_prs_acquire(pReg, irq_handlers[pReg) != NRFX_SUCCESS) {
                errorCode = CELLULAR_PORT_PLATFORM_ERROR;
            }
#endif
            if (errorCode == 0) {
                // Create the mutex
                errorCode = cellularPortMutexCreate(&(gUartData[uart].mutex));
                if (errorCode == 0) {

                    CELLULAR_PORT_MUTEX_LOCK(gUartData[uart].mutex);

                    errorCode = CELLULAR_PORT_OUT_OF_MEMORY;

                    // Malloc memory for the read buffer
                    pRxBuffer = pCellularPort_malloc(CELLULAR_PORT_UART_RX_BUFFER_SIZE);
                    if (pRxBuffer != NULL) {
                        // Set up the buffer list
                        for (size_t x = 0; x < sizeof(gUartData[uart].rxBufferList) /
                                               sizeof(gUartData[uart].rxBufferList[0]); x++) {
                            gUartData[uart].rxBufferList[x].pStart = pRxBuffer;
                            gUartData[uart].rxBufferList[x].pRead = pRxBuffer;
                            gUartData[uart].rxBufferList[x].toRead = 0;
                            // Set up the next pointers in a ring
                            if (x < sizeof(gUartData[uart].rxBufferList) /
                                    sizeof(gUartData[uart].rxBufferList[0]) - 1) {
                                gUartData[uart].rxBufferList[x].pNext = &(gUartData[uart].rxBufferList[x + 1]);
                            } else {
                                gUartData[uart].rxBufferList[x].pNext = &(gUartData[uart].rxBufferList[0]);
                            }
                            pRxBuffer += CELLULAR_PORT_UART_SUB_BUFFER_SIZE;
                        }
                        gUartData[uart].pRxBufferRead = &(gUartData[uart].rxBufferList[0]);
                        gUartData[uart].pRxBufferWrite = &(gUartData[uart].rxBufferList[0]);
                        gUartData[uart].userNeedsNotify = true;

                        // Create the queue
                        errorCode = cellularPortQueueCreate(CELLULAR_PORT_UART_EVENT_QUEUE_SIZE,
                                                            sizeof(CellularPortUartEventData_t),
                                                            pUartQueue);
                        if (errorCode == 0) {
                            gUartData[uart].queue = *pUartQueue;

                            // Set baud rate
                            nrf_uarte_baudrate_set(pReg, baudRateNrf);

                            // Set Tx/Rx pins
                            nrf_gpio_pin_set(pinTx);
                            nrf_gpio_cfg_output(pinTx);
                            // You might expect this to be "no pull" since
                            // the line is pulled up by the module already but
                            // the problem is that when the module is powered
                            // off the pin floats low which the NRF52840 UART
                            // reads as "break" which floods the input buffers
                            // with a constant 0 that its impossible to switch
                            // off.
                            nrf_gpio_cfg_input(pinRx, NRF_GPIO_PIN_PULLUP);
                            nrf_uarte_txrx_pins_set(pReg, pinTx, pinRx);

                            // Set flow control
                            if (pinCts >= 0) {
                                pinCtsNrf = pinCts;
                                nrf_gpio_cfg_input(pinCtsNrf,
                                                   NRF_GPIO_PIN_NOPULL);
                                hwfc = NRF_UARTE_HWFC_ENABLED;
                            }
                            if (pinRts >= 0) {
                                pinRtsNrf = pinRts;
                                nrf_gpio_pin_set(pinRtsNrf);
                                nrf_gpio_cfg_output(pinRtsNrf);
                                hwfc = NRF_UARTE_HWFC_ENABLED;
                            }

                            if (hwfc == NRF_UARTE_HWFC_ENABLED) {
                                nrf_uarte_hwfc_pins_set(pReg, pinRtsNrf, pinCtsNrf);
                            }

                            // Configure the UART
                            nrf_uarte_configure(pReg, NRF_UARTE_PARITY_EXCLUDED, hwfc);

                           // Enable the UART
                            nrf_uarte_enable(pReg);

                            // Clear flags, set Rx interrupt and buffer and let it go
                            nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_ENDRX);
                            nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_ENDTX);
                            nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_ERROR);
                            nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_RXTO);
                            nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_RXSTARTED);
                            nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_TXSTOPPED);

                            // Let the end of one RX trigger the next immediately
                            nrf_uarte_shorts_enable(pReg, NRF_UARTE_SHORT_ENDRX_STARTRX);

                            nrf_uarte_rx_buffer_set(pReg,
                                                    (uint8_t *) (gUartData[uart].pRxBufferWrite->pStart),
                                                    CELLULAR_PORT_UART_SUB_BUFFER_SIZE);
                            nrf_uarte_task_trigger(pReg, NRF_UARTE_TASK_STARTRX);
                            nrf_uarte_int_enable(pReg, NRF_UARTE_INT_ENDRX_MASK     |
                                                       NRF_UARTE_INT_ERROR_MASK     |
                                                       NRF_UARTE_INT_RXTO_MASK      |
                                                       NRF_UARTE_INT_RXSTARTED_MASK);
                            NRFX_IRQ_PRIORITY_SET(getIrqNumber((void *) pReg),
                                                  NRFX_UARTE_DEFAULT_CONFIG_IRQ_PRIORITY);
                            NRFX_IRQ_ENABLE(getIrqNumber((void *) (pReg)));

                            // Put the tick timer into UART mode and
                            // register the receive timout callback
                            cellularPortPrivateTickTimeUartMode();
                            cellularPortPrivateTickTimeSetInterruptCb(rxCb,
                                                                      &(gUartData[uart]));
                        }
                    }

                    CELLULAR_PORT_MUTEX_UNLOCK(gUartData[uart].mutex);

                    // If we failed to create the queue or get memory for the buffer,
                    // delete the mutex, free memory and put the uart's
                    // mutex back to NULL
                    if ((errorCode != 0) ||
                        (pRxBuffer == NULL)) {
                        cellularPortMutexDelete(gUartData[uart].mutex);
                        gUartData[uart].mutex = NULL;
                        cellularPort_free(pRxBuffer);
                    }
                }
            }
        }
    }

    return (int32_t) errorCode;
}

int32_t cellularPortUartDeinit(int32_t uart)
{
    CellularPortErrorCode_t errorCode = CELLULAR_PORT_INVALID_PARAMETER;
    uint32_t pinRtsNrf;
    uint32_t pinCtsNrf;
    NRF_UARTE_Type *pReg;

    if (uart < sizeof(gUartData) / sizeof(gUartData[0])) {
        errorCode = CELLULAR_PORT_SUCCESS;
        if (gUartData[uart].mutex != NULL) {
            errorCode = CELLULAR_PORT_PLATFORM_ERROR;
            pReg = gUartData[uart].pReg;

            // No need to lock the mutex, we need to delete it
            // and we're not allowed to delete a locked mutex.
            // The caller needs to make sure that no read/write
            // is in progress when this function is called.

            // Disable Rx interrupts
            nrf_uarte_int_disable(pReg, NRF_UARTE_INT_ENDRX_MASK     |
                                        NRF_UARTE_INT_ERROR_MASK     |
                                        NRF_UARTE_INT_RXTO_MASK      |
                                        NRF_UARTE_INT_RXSTARTED_MASK);
            NRFX_IRQ_DISABLE(nrfx_get_irq_number((void *) (pReg)));

            // Deregister the timer callback and 
            // return the tick timer to normal mode
            cellularPortPrivateTickTimeSetInterruptCb(NULL, NULL);
            cellularPortPrivateTickTimeNormalMode();

            // Make sure all transfers are finished before UARTE is
            // disabled to achieve the lowest power consumption
            nrf_uarte_shorts_disable(pReg, NRF_UARTE_SHORT_ENDRX_STARTRX);
            nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_RXTO);
            nrf_uarte_task_trigger(pReg, NRF_UARTE_TASK_STOPRX);
            nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_TXSTOPPED);
            nrf_uarte_task_trigger(pReg, NRF_UARTE_TASK_STOPTX);
            while (!nrf_uarte_event_check(pReg, NRF_UARTE_EVENT_TXSTOPPED) ||
                   !nrf_uarte_event_check(pReg, NRF_UARTE_EVENT_RXTO)) {}

            // Disable the UARTE
            nrf_uarte_disable(pReg);

            // Put the pins back
            nrf_gpio_cfg_default(nrf_uarte_tx_pin_get(pReg));
            nrf_gpio_cfg_default(nrf_uarte_rx_pin_get(pReg));
            nrf_uarte_txrx_pins_disconnect(pReg);
            pinRtsNrf = nrf_uarte_rts_pin_get(pReg);
            pinCtsNrf = nrf_uarte_cts_pin_get(pReg);
            nrf_uarte_hwfc_pins_disconnect(pReg);
            if (pinCtsNrf != NRF_UARTE_PSEL_DISCONNECTED) {
                nrf_gpio_cfg_default(pinCtsNrf);
            }
            if (pinRtsNrf != NRF_UARTE_PSEL_DISCONNECTED) {
                nrf_gpio_cfg_default(pinRtsNrf);
            }

            // Delete the queue
            cellularPortQueueDelete(gUartData[uart].queue);
            gUartData[uart].queue = NULL;
            // Free the buffer
            cellularPort_free(gUartData[uart].rxBufferList[0].pStart);
            // Delete the mutex
            cellularPortMutexDelete(gUartData[uart].mutex);
            gUartData[uart].mutex = NULL;
            errorCode = CELLULAR_PORT_SUCCESS;
        }
    }

    return (int32_t) errorCode;
}

int32_t cellularPortUartGetReceiveSize(int32_t uart)
{
    CellularPortErrorCode_t sizeOrErrorCode = CELLULAR_PORT_INVALID_PARAMETER;
    CellularPortUartBuffer_t *pRxBuffer;

    if (uart < sizeof(gUartData) / sizeof(gUartData[0])) {
        sizeOrErrorCode = CELLULAR_PORT_NOT_INITIALISED;
        if (gUartData[uart].mutex != NULL) {

            CELLULAR_PORT_MUTEX_LOCK(gUartData[uart].mutex);

            // Count up the lot
            pRxBuffer = gUartData[uart].pRxBufferRead;
            sizeOrErrorCode = 0;
            for (size_t x = 0; x < sizeof(gUartData[uart].rxBufferList) /
                                   sizeof(gUartData[uart].rxBufferList[0]); x++) {
                sizeOrErrorCode += pRxBuffer->toRead;
                pRxBuffer = pRxBuffer->pNext;
            }

            CELLULAR_PORT_MUTEX_UNLOCK(gUartData[uart].mutex);

        }
    }

    return (int32_t) sizeOrErrorCode;
}

int32_t cellularPortUartRead(int32_t uart, char *pBuffer,
                             size_t sizeBytes)
{
    CellularPortErrorCode_t sizeOrErrorCode = CELLULAR_PORT_INVALID_PARAMETER;
    CellularPortUartBuffer_t *pRxBuffer;
    size_t thisRead;

    if ((pBuffer != NULL) && (sizeBytes > 0) &&
        (uart < sizeof(gUartData) / sizeof(gUartData[0]))) {
        sizeOrErrorCode = CELLULAR_PORT_NOT_INITIALISED;
        if (gUartData[uart].mutex != NULL) {

            CELLULAR_PORT_MUTEX_LOCK(gUartData[uart].mutex);

            // Move along the buffers copying out
            // everything we can from each one
            sizeOrErrorCode = 0;
            pRxBuffer = gUartData[uart].pRxBufferRead;
            while ((sizeBytes > 0) &&
                   (pRxBuffer != gUartData[uart].pRxBufferWrite)) {
                // Read what we can from the current
                // receive read buffer
                thisRead = pRxBuffer->toRead;
                if (thisRead > sizeBytes) {
                    thisRead = sizeBytes;
                }
                pCellularPort_memcpy(pBuffer,
                                     pRxBuffer->pRead,
                                     thisRead);
                // Move buffer pointer and reduce read count
                // by what we've read
                pBuffer += thisRead;
                pRxBuffer->toRead -= thisRead;
                pRxBuffer->pRead += thisRead;
                if (pRxBuffer->toRead <= 0) {
                    // If we've read everything from this
                    // receive buffer, move to the next,
                    // no need to reset the read pointer,
                    // the interrupt will do that
                    pRxBuffer = pRxBuffer->pNext;
                    if (pRxBuffer != gUartData[uart].pRxBufferWrite) {
                        gUartData[uart].pRxBufferRead = pRxBuffer;
                    }
                }
                // Update the totals
                sizeOrErrorCode += thisRead;
                sizeBytes -= thisRead;
            }

            // Set the notify flag if we've read everything
            gUartData[uart].userNeedsNotify = false;
            if (pRxBuffer->toRead == 0) {
                gUartData[uart].userNeedsNotify = true;
            }

            CELLULAR_PORT_MUTEX_UNLOCK(gUartData[uart].mutex);
        }
    }

    return (int32_t) sizeOrErrorCode;
}

int32_t cellularPortUartWrite(int32_t uart,
                              const char *pBuffer,
                              size_t sizeBytes)
{
    CellularPortErrorCode_t sizeOrErrorCode = CELLULAR_PORT_INVALID_PARAMETER;
    const char *pTxBuffer = NULL;
    char *pTmpBuffer = NULL;
    NRF_UARTE_Type *pReg;

    if ((pBuffer != NULL) &&
        (uart < sizeof(gUartData) / sizeof(gUartData[0]))) {
        sizeOrErrorCode = CELLULAR_PORT_NOT_INITIALISED;
        if (gUartData[uart].mutex != NULL) {

            CELLULAR_PORT_MUTEX_LOCK(gUartData[uart].mutex);

            sizeOrErrorCode = CELLULAR_PORT_OUT_OF_MEMORY;
            pReg = gUartData[uart].pReg;

            // If the provided buffer is not good for
            // DMA (e.g. if it's in flash) then copy
            // it to somewhere that is
            if (!isGoodForDma(pBuffer)) {
                pTmpBuffer = pCellularPort_malloc(sizeBytes);
                if (pTmpBuffer != NULL) {
                    pCellularPort_memcpy(pTmpBuffer, pBuffer, sizeBytes);
                    pTxBuffer = pTmpBuffer;
                }
            } else {
                pTxBuffer = pBuffer;
            }

            if (pTxBuffer != NULL) {
                // Set up the flags
                nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_ENDTX);
                nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_TXSTOPPED);
                nrf_uarte_tx_buffer_set(pReg, (uint8_t const *) pTxBuffer, sizeBytes);
                nrf_uarte_task_trigger(pReg, NRF_UARTE_TASK_STARTTX);

                // Wait for the transmission to complete
                while (!nrf_uarte_event_check(pReg, NRF_UARTE_EVENT_ENDTX)) {}

                // Put UARTE into lowest power state.
                nrf_uarte_task_trigger(pReg, NRF_UARTE_TASK_STOPTX);
                while (!nrf_uarte_event_check(pReg, NRF_UARTE_EVENT_TXSTOPPED)) {}

                sizeOrErrorCode = sizeBytes;
            }

            // Free memory (it is valid C to free a NULL buffer)
            cellularPort_free(pTmpBuffer);

            CELLULAR_PORT_MUTEX_UNLOCK(gUartData[uart].mutex);
        }
    }

    return (int32_t) sizeOrErrorCode;
}
